syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package adminserver.api.v1;

option go_package = "server/admin-server/api/v1;v1";

service ResourcePoolService {
  rpc ListResourcePool(google.protobuf.Empty) returns (ResourcePoolList){
    option (google.api.http) = {
      get: "/v1/resourcemanage/resourcepool",
    };
  };
  rpc CreateResourcePool(CreateResourcePoolRequest) returns (ResourcePoolReply){
    option (google.api.http) = {
      post: "/v1/resourcemanage/resourcepool",
      body: "*"
    };
  };
  rpc UpdateResourcePool(UpdateResourcePoolRequest) returns (ResourcePoolReply){
    option (google.api.http) = {
      put: "/v1/resourcemanage/resourcepool/{id}",
      body: "*"
    };
  };
  rpc DeleteResourcePool(DeleteResourcePoolRequest) returns (DeleteResourcePoolReply){
    option (google.api.http) = {
      delete: "/v1/resourcemanage/resourcepool/{id}",
    };
  };
}

message ResourceSpecIdList {
  repeated string resourceSpecIds = 1;
}

message ResourcePool {
  string id = 1;
  string name = 2;
  string desc = 3;
  bool default = 4;
  repeated string bindingNodes = 5;
  map<string,ResourceSpecIdList> mapResourceSpecIdList = 6;
  map<string,string> resourceCapacity = 7;
  map<string,string> resourceAllocated = 8;
}

message ResourcePoolList {
  repeated ResourcePool resourcePools = 1;
}

message CreateResourcePoolRequest {
  string name = 1;
  string desc = 2;
  repeated string bindingNodes = 3;
  map<string,ResourceSpecIdList> mapResourceSpecIdList = 4;
}

message UpdateResourcePoolRequest {
  string id = 1;
  string desc = 2;
  repeated string bindingNodes = 3;
  map<string,ResourceSpecIdList> mapResourceSpecIdList = 4;
}

message ResourcePoolReply {
  string id = 1;
}

message DeleteResourcePoolRequest {
  string id = 1;
}

message DeleteResourcePoolReply {
  string id = 1;
}